--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                 <div class="sinopsis">   
                         <h2><span class="titulo__pelicula">TITANIC</span></h2>
-                        <p>Jack es un joven artista que gana un pasaje para viajar a América en el Titanic, el transatlántico más grande y seguro jamás construido. A bordo del buque conoce a Rose, una chica de clase alta que viaja con su madre y su prometido Cal, un millonario engreído a quien solo interesa el prestigio de la familia de su prometida. Jack y Rose se enamoran a pesar de las trabas que ponen la madre de ella y Cal en su relación. Mientras, el lujoso transatlántico se acerca a un inmenso iceberg. </p>
+                        <p><i>Jack</i> es un joven artista que gana un <b>pasaje</b> para viajar a <b>América</b> en el <b>Titanic</b>, el <b>transatlántico</b> más <b>grande</b> y <b>seguro</b> jamás construido. A bordo del buque conoce a <i>Rose</i>, una <b>chica</b> de <b>clase alta</b> que viaja con su <b>madre</b> y su <b>prometido</b> <i>Cal</i>, un <b>millonario</b> <b>engreído</b> a quien solo interesa el prestigio  de la familia de su prometida. <i>Jack</i> y <i>Rose</i> se <b>enamoran</b> a pesar de las <b>trabas</b> que ponen la madre de ella y <i>Cal</i> en su <b>relación</b>. Mientras, el <b>lujoso</b> transatlántico se <b>acerca</b> a un <b>inmenso</b> <b>iceberg</b>.</p>
                         <input class="boton" type="submit" value="Comprar">    
                     </div>
 
@@ -171,6 +171,7 @@
                     <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/CHekzSiZjrY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
         </section>
+        <hr>
             
 
         <!--SE7EN-->
@@ -200,7 +201,7 @@
 
             <div class="sinopsis">   
                 <h2><span class="titulo__pelicula">SE7EN</span></h2>
-                <p>El veterano teniente Somerset está a punto de jubilarse y ser reemplazado por el impulsivo detective David Mills. Ambos tendrán que colaborar en la resolución de unos asesinatos cometidos por un psicópata que se basa en los siete pecados capitales.
+                <p>El veterano teniente <i>Somerset</i> está a punto de jubilarse y ser reemplazado por el impulsivo detective <i>David Mills</i>. Ambos tendrán que colaborar en la <b>resolución</b> de unos <b>asesinatos</b> cometidos por un <b>psicópata</b> que se basa en los <b>siete pecados capitales</b>.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -209,6 +210,7 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/xhzBmjdehPA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
+        <hr>
 
         <!--MUJER BONITA-->
         <section class="contenedorTotal">
@@ -236,14 +238,14 @@
 
             <div class="sinopsis">   
                 <h2><span class="titulo__pelicula">MUJER BONITA</span></h2>
-                <p>Durante un viaje de negocios a Los Ángeles, Edward, un ejecutivo que compra y vende empresas, encuentra a la prostituta Vivian. Después de pasar una primera noche con ella, Edward le ofrece dinero para que pase toda la semana con él y le acompañe a diversos actos sociales. A medida que van pasando los días, los dos descubren que tienen que superar diversos obstáculos para poder unir sus mundos tan distintos.</p>
+                <p>Durante un viaje de negocios a <b>Los Ángeles</b>, <i>Edward</i>, un ejecutivo que compra y vende <b>empresas</b>, encuentra a la <b>prostituta</b> <i>Vivian</i>. Después de pasar una primera noche con ella, <i>Edward</i> le ofrece <b>dinero</b> para que pase toda la semana con él y le acompañe a diversos actos sociales. A medida que van pasando los días, los dos descubren que tienen que superar <b>diversos obstáculos</b> para poder <b>unir</b>sus mundos tan <b>distintos</b>.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
 
             <div class="video" data-aos="fade-left">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/DvPEFrTBu_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                </div>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/DvPEFrTBu_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
         </section>
-
+        <hr>
 
         <!--MATRIX-->
         <section class="contenedorTotal">
@@ -270,13 +272,14 @@
             </div>
             <div class="sinopsis">   
                 <h2><span class="titulo__pelicula">MATRIX</span></h2>
-                <p>El programador informático Thomas Anderson, más conocido en el mundo de los "hacker" como Neo, está en el punto de mira del temible agente Smith. Otros dos piratas informáticos, Trinity y Morfeo, se ponen en contacto con Neo para ayudarlo a escapar. Matrix te posee. Sigue al conejo blanco.</p>
+                <p>El <b>programador informático</b> <i>Thomas Anderson</i>, más conocido en el mundo de los <b>"hacker"</b> como <i>Neo</i>, está en el punto de mira del temible <i>agente Smith</i>. Otros dos piratas informáticos, <i>Trinity y Morfeo</i>, se ponen en contacto con <i>Neo</i> para ayudarlo a <b>escapar</b>. <b>Matrix te posee. Sigue al conejo blanco.</b></p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
             <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/m8e-FF8MsqU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
+        <hr>
 
         <!--LA MOMIA-->
         <section class="contenedorTotal">
@@ -303,13 +306,14 @@
             </div>
             <div class="sinopsis">   
                 <h2><span class="titulo__pelicula">LA MOMIA</span></h2>
-                <p>Rick O'Connell y un compañero descubren las ruinas de Hamunaptra. Después vuelven al mismo lugar con una egiptóloga y su hermano. Allí coinciden con un grupo de americanos que provocan la resurrección de la momia de un diabólico sacerdote egipcio.</p>
+                <p><i>Rick O'Connell </i> y un compañero descubren <b>las ruinas de Hamunaptra</b>. Después vuelven al mismo lugar con una <i>egiptóloga</i> y su <i>hermano</i>. Allí coinciden con un grupo de americanos que provocan la <b>resurrección</b> de la <b>momia</b> de un <b>diabólico sacerdote egipcio</b>.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
             <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/CT6yWV9e4Ig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
+        <hr>
 
         <!--MI POBRE ANGELITO-->
         <section class="contenedorTotal">
@@ -336,7 +340,7 @@
             </div>
             <div class="sinopsis">   
                 <h2><span class="titulo__pelicula">MI POBRE ANGELITO</span></h2>
-                <p>El joven Kevin McCallister se porta mal la noche antes de ir de viaje a París, por lo que su madre le obliga a dormir en el ático. Al día siguiente y con todas las prisas, la familia va al aeropuerto y se olvida de Kevin. Entonces el niño se despierta solo en casa y cree que ha hecho realidad su sueño de vivir sin familia. Sin embargo, el entusiasmo de Kevin se desvanece cuando descubre que dos delincuentes planean robar la casa de los McCallister y él deberá protegerla.
+                <p>El joven <i>Kevin McCallister</i> se porta mal la noche antes de ir de <b>viaje</b> a París, por lo que su madre le obliga a dormir en el ático. Al día siguiente y con todas las prisas, la familia va al aeropuerto y <b>se olvida de <i>Kevin</i></b>. Entonces el niño se despierta <b>solo</b> en casa y cree que ha hecho realidad su sueño de vivir sin familia. Sin embargo, el entusiasmo de <i>Kevin</i> se desvanece cuando descubre que dos <b>delincuentes</b> planean <b>robar</b> la <b>casa</b> de los <i>McCallister</i> y él deberá <b>protegerla</b>.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -344,6 +348,7 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/I-zoVUYHPMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
+        <hr>
 
         <!--EL GUARDAESPALDAS-->
         <section class="contenedorTotal">
@@ -370,7 +375,7 @@
             </div>
             <div class="sinopsis">   
                 <h2><span class="titulo__pelicula">EL GUARDAESPALDAS</span></h2>
-                <p>Un agente del servicio secreto, ahora guardaespaldas, encuentra el peligro y el amor cuando protege a una cantante.
+                <p>Un <i>agente del servicio secreto</i>, ahora <b>guardaespaldas</b>, encuentra el <b>peligro</b> y el <b>amor</b> cuando protege a una <b>cantante</b>.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -378,6 +383,7 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/4JFRdJTszRM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
+        <hr>
 
         <!--BICHOS-->
         <section class="contenedorTotal">
@@ -404,7 +410,7 @@
             </div>
             <div class="sinopsis">   
                 <h2><span class="titulo__pelicula">BICHOS</span></h2>
-                <p>Una hormiga realiza una misión peligrosa para proteger a su colonia de un ejército de saltamontes terroristas.
+                <p>Una <b>hormiga</b> realiza una <b>misión peligrosa</b> para <b>proteger</b> a su colonia de un <b>ejército de saltamontes terroristas</b>.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -412,6 +418,7 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/38wy8FR_8aM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div> 
         </section>
+        <hr>
 
         <!--BELLEZA AMERICANA-->
         <section class="contenedorTotal">
@@ -438,7 +445,7 @@
             </div>
             <div class="sinopsis">   
                 <h2><span class="titulo__pelicula">BELLEZA AMERICANA</span></h2>
-                <p>Lester Burnham es un cuarentón en crisis, cansado de su trabajo y de su mujer, que despierta de su letargo cuando conoce a la atractiva amiga de su hija, a la que intentará impresionar a toda costa.
+                <p><i>Lester Burnham</i> es un <b>cuarentón</b> en crisis, <b>cansado</b> de su trabajo y de su mujer, que despierta de su letargo cuando conoce a la <b>atractiva amiga de su hija</b>, a la que intentará <b>impresionar</b> a toda costa.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
