--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
         <div class="bloque-cartelera">
-            <h1 class="bloque__cartelera">PELICULAS EN CARTEL</h1>
+            <h1 class="bloque__cartelera">cartelera</h1>
         </div> 
 
         <!--TITANIC-->
@@ -171,11 +171,10 @@
                     <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/CHekzSiZjrY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
         </section>
-        <hr>
             
 
         <!--SE7EN-->
-        <section class="contenedorTotal">
+        <section class="contenedorTotal fondo">
             <div class="img-1">
                 <img class="imagen__2" data-aos="flip-left" src="imagenes/Seven_Se7en-734875211-large.jpeg" alt="seven sinopsis">
             </div>
@@ -210,7 +209,6 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/xhzBmjdehPA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
-        <hr>
 
         <!--MUJER BONITA-->
         <section class="contenedorTotal">
@@ -245,10 +243,9 @@
             <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/DvPEFrTBu_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
         </section>
-        <hr>
 
         <!--MATRIX-->
-        <section class="contenedorTotal">
+        <section class="contenedorTotal fondo">
             <div class="img-1">
                 <img class="imagen__4" data-aos="flip-left" src="imagenes/Matrix-155050517-large.jpeg" alt="matrix sinopsis">
             </div>
@@ -279,7 +276,6 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/m8e-FF8MsqU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
-        <hr>
 
         <!--LA MOMIA-->
         <section class="contenedorTotal">
@@ -313,10 +309,9 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/CT6yWV9e4Ig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
-        <hr>
 
         <!--MI POBRE ANGELITO-->
-        <section class="contenedorTotal">
+        <section class="contenedorTotal fondo">
             <div class="img-1">
                 <img class="imagen__6" data-aos="flip-left" src="imagenes/mi pobre angelito sinopsis.jpeg" alt="mi pobre angelito sinopsis">
             </div>
@@ -348,7 +343,6 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/I-zoVUYHPMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
-        <hr>
 
         <!--EL GUARDAESPALDAS-->
         <section class="contenedorTotal">
@@ -383,10 +377,9 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/4JFRdJTszRM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
-        <hr>
 
         <!--BICHOS-->
-        <section class="contenedorTotal">
+        <section class="contenedorTotal fondo">
             <div class="img-1">
                 <img class="imagen__8" data-aos="flip-left" src="imagenes/bichos.jpeg" alt="bichos sinopsis">
             </div>
@@ -418,7 +411,6 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/38wy8FR_8aM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div> 
         </section>
-        <hr>
 
         <!--BELLEZA AMERICANA-->
         <section class="contenedorTotal">
