--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -91,46 +91,9 @@
     </div>
 
     <main class="caja">
-      <!--CAROUSEL-->
-      <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="../imagenes/titanic.jpg" class="d-block w-100" alt="titanic">
-            </div>
-            <div class="carousel-item">
-                <img src="../imagenes/seven.jpg" class="d-block w-100" alt="seven">
-            </div>
-            <div class="carousel-item">
-                <img src="../imagenes/mujer-bonita.jpg" class="d-block w-100" alt="mujer bonita">
-            </div>
-            <div class="carousel-item">
-                <img src="../imagenes/matrix.jpg" class="d-block w-100" alt="matrix">
-            </div>
-            <div class="carousel-item">
-                <img src="../imagenes/la-momia.jpg" class="d-block w-100" alt="la momia">
-            </div>
-            <div class="carousel-item">
-                <img src="../imagenes/mi-pobre-angelito.jpg" class="d-block w-100" alt="mi pobre angelito">
-            </div>
-            <div class="carousel-item">
-                <img src="../imagenes/el-guardaespaldas.jpg" class="d-block w-100" alt="el guardaespaldas">
-            </div>
-            <div class="carousel-item">
-                <img src="../imagenes/bichos.jpg" class="d-block w-100" alt="bichos">
-            </div>
-            <div class="carousel-item">
-                <img src="../imagenes/belleza-americana.jpg" class="d-block w-100" alt="belleza americana">
-            </div>
+        <div>
+          <img class="imagen-principal" src="../imagenes/mujer-bonita-2" alt="mujer-bonita">
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
 
 
       <div class="bloque-horarios">
@@ -139,49 +102,49 @@
 
       <!--HORARIOS-->
       <section class="horarios">
-          <div class="horarios__1">
+          <div class="horarios__contenedor">
             <img class="horarios__1_img" data-aos="fade-right" src="../imagenes/titanicsinopsis.jpeg" alt="titanic">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p> 
           </div>
 
-          <div class="horarios__2">
+          <div class="horarios__contenedor">
             <img class="horarios__2_img" data-aos="fade-down" src="../imagenes/Seven_Se7en-734875211-large.jpeg" alt="seven">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span> <span class="funciones">21:30</span></p>
+            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
-          <div class="horarios__3">
+          <div class="horarios__contenedor">
             <img class="horarios__3_img" data-aos="fade-left" src="../imagenes/pretty woman sinopsis.jpeg" alt="pretty-woman">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
-          <div class="horarios__4">
+          <div class="horarios__contenedor">
             <img class="horarios__4_img" data-aos="fade-right" src="../imagenes/Matrix-155050517-large.jpeg" alt="matrix">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
-          <div class="horarios__5">
+          <div class="horarios__contenedor">
             <img class="horarios__5_img" data-aos="fade-down" src="../imagenes/la momia sinopsis.jpeg" alt="la-momia">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
-          <div class="horarios__6">
+          <div class="horarios__contenedor">
             <img class="horarios__6_img" data-aos="fade-left" src="../imagenes/mi pobre angelito sinopsis.jpeg" alt="home-alone">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
-          <div class="horarios__7">
+          <div class="horarios__contenedor">
             <img class="horarios__7_img" data-aos="fade-right" src="../imagenes/el-guardaespaldas .jpeg" alt="el-guardaespaldas">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
-          <div class="horarios__8">
+          <div class="horarios__contenedor">
             <img class="horarios__8_img" data-aos="fade-down" src="../imagenes/bichos.jpeg" alt="bichos">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
-          <div class="horarios__9">
+          <div class="horarios__contenedor">
             <img class="horarios__9_img" data-aos="fade-left" src="../imagenes/belleza-americana.jpeg" alt="belleza-americana">
-            <p class="horarios__p">Martes 17 de mayo<span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
+            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
       </section>
     </main>
