--- a/paginas/combos.html
+++ b/paginas/combos.html
@@ -92,48 +92,12 @@
 
     <main class="caja">
         <!--CAROUSEL-->
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../imagenes/titanic.jpg" class="d-block w-100" alt="titanic">
-                </div>
-                <div class="carousel-item">
-                    <img src="../imagenes/seven.jpg" class="d-block w-100" alt="seven">
-                </div>
-                <div class="carousel-item">
-                    <img src="../imagenes/mujer-bonita.jpg" class="d-block w-100" alt="mujer bonita">
-                </div>
-                <div class="carousel-item">
-                    <img src="../imagenes/matrix.jpg" class="d-block w-100" alt="matrix">
-                </div>
-                <div class="carousel-item">
-                    <img src="../imagenes/la-momia.jpg" class="d-block w-100" alt="la momia">
-                </div>
-                <div class="carousel-item">
-                    <img src="../imagenes/mi-pobre-angelito.jpg" class="d-block w-100" alt="mi pobre angelito">
-                </div>
-                <div class="carousel-item">
-                    <img src="../imagenes/el-guardaespaldas.jpg" class="d-block w-100" alt="el guardapespaldas">
-                </div>
-                <div class="carousel-item">
-                    <img src="../imagenes/bichos.jpg" class="d-block w-100" alt="bichos">
-                </div>
-                <div class="carousel-item">
-                    <img src="../imagenes/belleza-americana.jpg" class="d-block w-100" alt="belleza americana">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+        <div>
+            <img class="imagen-principal" src="../imagenes/mi-pobre-angelito-comiendo.jpeg" alt="mi-pobre-angelito">
         </div>
 
         <div class="bloque-combos">
-            <h1 class="bloque__combos">COMBOS</h1>
+            <h1 class="bloque__combos">combos</h1>
         </div>
         
         <!--COMBOS-->
