--- a/paginas/combos.html
+++ b/paginas/combos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,8 +22,11 @@
         <!--MENU DE NAVEGACION-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand navbar__logo" href="../index.html"><span class=color__1>Cine</span><span class="color__2">Matrix</span></a>
-                <button class="navbar-toggler navbar__button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand navbar__logo" href="../index.html"><span class=color__1>Cine</span><span
+                        class="color__2">Matrix</span></a>
+                <button class="navbar-toggler navbar__button" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -74,36 +78,36 @@
         </div>
 
         <div class="menu">
-            <ul class="menu__numeros">
-                <li>
-                    <a class="menu__numeros__2" href="#">1</a>
-                    <a class="menu__numeros__2" href="#">2</a>
-                    <a class="menu__numeros__2" href="#">3</a>
-                    <a class="menu__numeros__2" href="#">4</a>
-                    <a class="menu__numeros__2" href="#">5</a>
-                    <a class="menu__numeros__2" href="#">6</a>
-                    <a class="menu__numeros__2" href="#">7</a>
-                    <a class="menu__numeros__2" href="#">8</a>
-                    <a class="menu__numeros__2" href="#">9</a>
-                </li>
-            </ul>
+            <nav>
+                <ul class="menu__numeros">
+                    <li>
+                        <a class="menu__numeros__2" href="#">1</a>
+                        <a class="menu__numeros__2" href="#">2</a>
+                        <a class="menu__numeros__2" href="#">3</a>
+                        <a class="menu__numeros__2" href="#">4</a>
+                        <a class="menu__numeros__2" href="#">5</a>
+                        <a class="menu__numeros__2" href="#">6</a>
+                        <a class="menu__numeros__2" href="#">7</a>
+                        <a class="menu__numeros__2" href="#">8</a>
+                        <a class="menu__numeros__2" href="#">9</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 
     <main class="caja">
-        <!--CAROUSEL-->
         <div>
             <img class="imagen-principal" src="../imagenes/mi-pobre-angelito-comiendo.jpeg" alt="mi-pobre-angelito">
         </div>
-
         <div class="bloque-combos">
             <h1 class="bloque__combos">combos</h1>
         </div>
-        
+
         <!--COMBOS-->
         <section class="combos">
             <div class="combos__1">
-                <img src="../imagenes/balde-de-popcorn.jpeg" data-aos="zoom-in" class="combos-imagen"  alt="combo">
+                <img src="../imagenes/balde-de-popcorn.jpeg" data-aos="zoom-in" class="combos-imagen" alt="combo">
                 <p class="combos__p">Combo Jack: Pochoclos + gaseosa= $2000</p>
             </div>
 
@@ -140,13 +144,19 @@
             <p class="footer__parrafo"> © Copyright Cinematrix. Todos los derechos reservados.</p>
         </div>
         <div class="redes">
-            <a href="https://www.facebook.com" alt="facebook" target="__blank"><img src="../imagenes/facebook.png"></a>
-            <a href="https://www.instagram.com" alt="instagram" target="__blank"><img src="../imagenes/instagram.png"></a>
-            <a href="https://www.whatsapp.com" alt="whatsapp" target="__blank"><img src="../imagenes/whatsapp.png"></a>
+            <a href="https://www.facebook.com" alt="facebook" target="__blank"><img src="../imagenes/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com" alt="instagram" target="__blank"><img src="../imagenes/instagram.png" alt="instagram"></a>
+            <a href="https://www.whatsapp.com" alt="whatsapp" target="__blank"><img src="../imagenes/whatsapp.png" alt="whatsapp"></a>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+
+    <!--SCRIPT-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
