--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="../css/estilos.css" rel="stylesheet">
-    <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
-    <title>Horarios</title>
-    <meta name="description" content="Conoce todos los dias y horarios que ofrecemos para que puedas visitarnos.">
-    <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores, horarios.">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="../css/estilos.css" rel="stylesheet">
+  <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
+  <title>Horarios</title>
+  <meta name="description" content="Conoce todos los dias y horarios que ofrecemos para que puedas visitarnos.">
+  <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores, horarios.">
 </head>
 
 <body>
@@ -21,59 +22,62 @@
     <!--MENU DE NAVEGACION-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-          <a class="navbar-brand navbar__logo" href="../index.html"><span class=color__1>Cine</span><span class="color__2">Matrix</span></a>
-          <button class="navbar-toggler navbar__button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="../index.html"></a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link navbar__link" href="../index.html">Cartelera</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link navbar__link" href="horarios.html">Horarios</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link navbar__link" href="combos.html">Combos</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link navbar__link" href="precios.html">Precios</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link navbar__link" href="proximos-estrenos.html">Proximos estrenos</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link navbar__link" href="contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link disabled"></a>
-                  </li>
-              </ul>
-          </div>
+        <a class="navbar-brand navbar__logo" href="../index.html"><span class=color__1>Cine</span><span
+            class="color__2">Matrix</span></a>
+        <button class="navbar-toggler navbar__button" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__link" href="../index.html">Cartelera</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__link" href="horarios.html">Horarios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__link" href="combos.html">Combos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__link" href="precios.html">Precios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__link" href="proximos-estrenos.html">Proximos estrenos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__link" href="contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled"></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
   </header>
 
   <!--SELECTOR DE PELICULAS DISABLED-->
   <div class="seleccion">
-        <div class="seleccion__peliculas">
-            <select name="pelicula" id="pelicula">
-                <option value="titanic"> Titanic - 2D Cast</option>
-                <option value="Sev"> Seven - 2D Cast</option>
-                <option value="Pre"> Mujer bonita - 2D Cast</option>
-                <option value="Mat"> Matrix - 2D Cast</option>
-                <option value="Mom"> La Momia - 2D Cast</option>
-                <option value="Ang"> Mi Pobre Angelito- 2D Cast</option>
-                <option value="Gho"> Ghost - 2D Cast</option>
-                <option value="Bic"> Bichos - 2D Cast</option>
-                <option value="Ros"> Belleza Americana - 2D Cast</option>
-            </select>
-        </div>
+    <div class="seleccion__peliculas">
+      <select name="pelicula" id="pelicula">
+        <option value="titanic"> Titanic - 2D Cast</option>
+        <option value="Sev"> Seven - 2D Cast</option>
+        <option value="Pre"> Mujer bonita - 2D Cast</option>
+        <option value="Mat"> Matrix - 2D Cast</option>
+        <option value="Mom"> La Momia - 2D Cast</option>
+        <option value="Ang"> Mi Pobre Angelito- 2D Cast</option>
+        <option value="Gho"> Ghost - 2D Cast</option>
+        <option value="Bic"> Bichos - 2D Cast</option>
+        <option value="Ros"> Belleza Americana - 2D Cast</option>
+      </select>
+    </div>
 
-      <div class="menu">
+    <div class="menu">
+      <nav>
           <ul class="menu__numeros">
               <li>
                   <a class="menu__numeros__2" href="#">1</a>
@@ -87,94 +91,98 @@
                   <a class="menu__numeros__2" href="#">9</a>
               </li>
           </ul>
-      </div>
+      </nav>
+  </div>
+</div>
+
+  <main class="caja">
+    <div>
+      <img class="imagen-principal" src="../imagenes/mujer-bonita-2" alt="mujer-bonita">
+    </div>
+    <div class="bloque-horarios">
+      <h1 class="bloque__horarios">Horarios</h1>
     </div>
 
-    <main class="caja">
-        <div>
-          <img class="imagen-principal" src="../imagenes/mujer-bonita-2" alt="mujer-bonita">
-        </div>
-
-
-      <div class="bloque-horarios">
-        <h1 class="bloque__horarios">Horarios</h1>
+    <!--HORARIOS-->
+    <section class="horarios">
+      <div class="horarios__contenedor">
+        <img class="horarios__1_img" data-aos="fade-right" src="../imagenes/titanicsinopsis.jpeg" alt="titanic">
+        <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
       </div>
 
-      <!--HORARIOS-->
-      <section class="horarios">
-          <div class="horarios__contenedor">
-            <img class="horarios__1_img" data-aos="fade-right" src="../imagenes/titanicsinopsis.jpeg" alt="titanic">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p> 
-          </div>
-
-          <div class="horarios__contenedor">
-            <img class="horarios__2_img" data-aos="fade-down" src="../imagenes/Seven_Se7en-734875211-large.jpeg" alt="seven">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
-          </div>
-
-          <div class="horarios__contenedor">
-            <img class="horarios__3_img" data-aos="fade-left" src="../imagenes/pretty woman sinopsis.jpeg" alt="pretty-woman">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
-          </div>
-
-          <div class="horarios__contenedor">
-            <img class="horarios__4_img" data-aos="fade-right" src="../imagenes/Matrix-155050517-large.jpeg" alt="matrix">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
-          </div>
-
-          <div class="horarios__contenedor">
-            <img class="horarios__5_img" data-aos="fade-down" src="../imagenes/la momia sinopsis.jpeg" alt="la-momia">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
-          </div>
-
-          <div class="horarios__contenedor">
-            <img class="horarios__6_img" data-aos="fade-left" src="../imagenes/mi pobre angelito sinopsis.jpeg" alt="home-alone">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
-          </div>
-
-          <div class="horarios__contenedor">
-            <img class="horarios__7_img" data-aos="fade-right" src="../imagenes/el-guardaespaldas .jpeg" alt="el-guardaespaldas">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
-          </div>
-
-          <div class="horarios__contenedor">
-            <img class="horarios__8_img" data-aos="fade-down" src="../imagenes/bichos.jpeg" alt="bichos">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
-          </div>
-
-          <div class="horarios__contenedor">
-            <img class="horarios__9_img" data-aos="fade-left" src="../imagenes/belleza-americana.jpeg" alt="belleza-americana">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
-          </div>
-      </section>
-    </main>
-
-    <!--FOOTER-->
-    <footer>
-        <div>
-          <nav class="footer">
-              <ul class="footer__lista">
-                <li><a class="footer__seleccion" href="../index.html">Cartelera |</a></li>
-                <li><a class="footer__seleccion" href="horarios.html">Horarios |</a></li>
-                <li><a class="footer__seleccion" href="combos.html">Combos |</a></li>
-                <li><a class="footer__seleccion" href="precios.html">Precios |</a></li>
-                <li><a class="footer__seleccion" href="proximos-estrenos.html">Proximos Estrenos |</a></li>
-                <li><a class="footer__seleccion" href="contacto.html">Contacto | </a></li>
-              </ul>
-          </nav>
-          <p class="footer__parrafo"> © Copyright Cinematrix. Todos los derechos reservados.</p>
-        </div>
-        <div class="redes">
-          <a href="https://www.facebook.com" alt="facebook" target="__blank"><img src="../imagenes/facebook.png"></a>
-          <a href="https://www.instagram.com" alt="instagram" target="__blank"><img src="../imagenes/instagram.png"></a>
-          <a href="https://www.whatsapp.com" alt="whatsapp" target="__blank"><img src="../imagenes/whatsapp.png"></a>
+      <div class="horarios__contenedor">
+        <img class="horarios__2_img" data-aos="fade-down" src="../imagenes/Seven_Se7en-734875211-large.jpeg" alt="seven">
+        <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
       </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-  </body>
+
+      <div class="horarios__contenedor">
+        <img class="horarios__3_img" data-aos="fade-left" src="../imagenes/pretty woman sinopsis.jpeg" alt="pretty woman">
+        <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
+      </div>
+
+      <div class="horarios__contenedor">
+        <img class="horarios__4_img" data-aos="fade-right" src="../imagenes/Matrix-155050517-large.jpeg" alt="matrix">
+        <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
+      </div>
+
+      <div class="horarios__contenedor">
+        <img class="horarios__5_img" data-aos="fade-down" src="../imagenes/la momia sinopsis.jpeg" alt="la momia">
+        <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
+      </div>
+
+      <div class="horarios__contenedor">
+        <img class="horarios__6_img" data-aos="fade-left" src="../imagenes/mi pobre angelito sinopsis.jpeg" alt="mi pobre angelito">
+        <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
+      </div>
+
+      <div class="horarios__contenedor">
+        <img class="horarios__7_img" data-aos="fade-right" src="../imagenes/el-guardaespaldas .jpeg" alt="el guardaespaldas">
+        <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
+      </div>
+
+      <div class="horarios__contenedor">
+        <img class="horarios__8_img" data-aos="fade-down" src="../imagenes/bichos.jpeg" alt="bichos">
+        <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
+      </div>
+
+      <div class="horarios__contenedor">
+        <img class="horarios__9_img" data-aos="fade-left" src="../imagenes/belleza-americana.jpeg" alt="belleza-americana">
+        <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
+      </div>
+    </section>
+  </main>
+
+  <!--FOOTER-->
+  <footer>
+    <div>
+      <nav class="footer">
+        <ul class="footer__lista">
+          <li><a class="footer__seleccion" href="../index.html">Cartelera |</a></li>
+          <li><a class="footer__seleccion" href="horarios.html">Horarios |</a></li>
+          <li><a class="footer__seleccion" href="combos.html">Combos |</a></li>
+          <li><a class="footer__seleccion" href="precios.html">Precios |</a></li>
+          <li><a class="footer__seleccion" href="proximos-estrenos.html">Proximos Estrenos |</a></li>
+          <li><a class="footer__seleccion" href="contacto.html">Contacto | </a></li>
+        </ul>
+      </nav>
+      <p class="footer__parrafo"> © Copyright Cinematrix. Todos los derechos reservados.</p>
+    </div>
+    <div class="redes">
+      <a href="https://www.facebook.com" alt="facebook" target="__blank"><img src="../imagenes/facebook.png" alt="facebook"></a>
+      <a href="https://www.instagram.com" alt="instagram" target="__blank"><img src="../imagenes/instagram.png" alt="instagram"></a>
+      <a href="https://www.whatsapp.com" alt="whatsapp" target="__blank"><img src="../imagenes/whatsapp.png" alt="whatsapp"></a>
+    </div>
+  </footer>
+  <!--SCRIPT-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+</body>
 </html>
