--- a/paginas/precios.html
+++ b/paginas/precios.html
@@ -15,7 +15,6 @@
     <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores, precios.">
     <title>Precios</title>
 </head>
-
 <body>
     <header>
         <!--MENU DE NAVEGACION-->
@@ -74,60 +73,60 @@
         </div>
 
         <div class="menu">
-            <ul class="menu__numeros">
-                <li>
-                    <a class="menu__numeros__2" href="#">1</a>
-                    <a class="menu__numeros__2" href="#">2</a>
-                    <a class="menu__numeros__2" href="#">3</a>
-                    <a class="menu__numeros__2" href="#">4</a>
-                    <a class="menu__numeros__2" href="#">5</a>
-                    <a class="menu__numeros__2" href="#">6</a>
-                    <a class="menu__numeros__2" href="#">7</a>
-                    <a class="menu__numeros__2" href="#">8</a>
-                    <a class="menu__numeros__2" href="#">9</a>
-                </li>
-            </ul>
+            <nav>
+                <ul class="menu__numeros">
+                    <li>
+                        <a class="menu__numeros__2" href="#">1</a>
+                        <a class="menu__numeros__2" href="#">2</a>
+                        <a class="menu__numeros__2" href="#">3</a>
+                        <a class="menu__numeros__2" href="#">4</a>
+                        <a class="menu__numeros__2" href="#">5</a>
+                        <a class="menu__numeros__2" href="#">6</a>
+                        <a class="menu__numeros__2" href="#">7</a>
+                        <a class="menu__numeros__2" href="#">8</a>
+                        <a class="menu__numeros__2" href="#">9</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 
     <main class="caja">
-        <!--CAROUSEL-->
         <div>
             <img class="imagen-principal" src="../imagenes/se7en.jpeg" alt="se7en">
         </div>
-
-            <div class="bloque-precios">
-                <h1 class="bloque__precios">Precios</h1>
-            </div>
+        <div class="bloque-precios">
+            <h1 class="bloque__precios">Precios</h1>
+        </div>
 
             <!--PRECIOS-->
-            <div class="precios-pagos" data-aos="flip-up">
-                <p class="parrafo">Precios Vigentes</p>
-                <p class="parrafo">Metodos de Pago</p>
-            </div>
+        <div class="precios-pagos" data-aos="flip-up">
+            <p class="parrafo">Precios Vigentes</p>
+            <p class="parrafo">Metodos de Pago</p>
+        </div>
 
-            <section class="tabla__precios" data-aos="flip-up">
+        <section class="tabla__precios" data-aos="flip-up">
+            <table>
+                <tr>
+                    <th>2D</th>
+                    <th>3D</th>
+                </tr>
+                <tr>
+                    <td>$400</td>
+                    <td>$500</td>
+                </tr>  
+            </table>
+
+            <div class="medios">
                 <table>
                     <tr>
-                        <th>2D</th>
-                        <th>3D</th>
+                        <th>Efectivo</th>
+                        <th>Mastercard - Maestro - Visa - Visa Electron - American Express - Cabal</th>
+                        <th>Transferencia @alias</th>
                     </tr>
-                    <tr>
-                        <td>$400</td>
-                        <td>$500</td>
-                    </tr>  
                 </table>
-
-                <div class="medios">
-                    <table>
-                        <tr>
-                            <th>Efectivo</th>
-                            <th>Mastercard - Maestro - Visa - Visa Electron - American Express - Cabal</th>
-                            <th>Transferencia @alias</th>
-                        </tr>
-                    </table>
-                </div>
-            </section>
+            </div>
+        </section>
     </main>
     
     <!--FOOTER-->
@@ -146,11 +145,12 @@
                 <p class="footer__parrafo">  © Copyright Cinematrix. Todos los derechos reservados.</p>
         </div>
         <div class="redes">
-            <a href="https://www.facebook.com" alt="facebook" target="__blank"><img src="../imagenes/facebook.png"></a>
-            <a href="https://www.instagram.com" alt="instagram" target="__blank"><img src="../imagenes/instagram.png"></a>
-            <a href="https://www.whatsapp.com" alt="whatsapp" target="__blank"><img src="../imagenes/whatsapp.png"></a>
+            <a href="https://www.facebook.com" alt="facebook" target="__blank"><img src="../imagenes/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com" alt="instagram" target="__blank"><img src="../imagenes/instagram.png" alt="instagram"></a>
+            <a href="https://www.whatsapp.com" alt="whatsapp" target="__blank"><img src="../imagenes/whatsapp.png" alt="whatsapp"></a>
         </div>
-        </footer>
+    </footer>
+    <!--SCRIPT-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
