--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="./css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="imagenes/pelicula (1).png" type="image/x-icon">
     <title>CineMatrix</title>
-    <meta name="description"
-        content="Cinematrix te espera para que puedas ver todo lo nuevo en peliculas a traves de nuestra fabulosa cartelera.">
-    <meta name="keywords"
-        content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores">
+    <meta name="description" content="Cinematrix te espera para que puedas ver todo lo nuevo en peliculas a traves de nuestra fabulosa cartelera.">
+    <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores">
 </head>
 
 <body>
